--- a/src/CadpazBundle/Resources/public/css/geral.css
+++ b/src/CadpazBundle/Resources/public/css/geral.css
@@ -317,6 +317,7 @@ a:visited{
 #userDetails {
     visibility: hidden;
     width: 97%;
+    overflow: auto;
 }
 #userDetails .meio {
     background: #eee;
