--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -1,49 +1,82 @@
-Nome: {{ pessoa.nome }}<br />
-Data de nascimento: {{ pessoa.dataNascimento|date('d/m/Y') }}<br />
-Email: {{ pessoa.email }}<br />
-Sexo: {{ pessoa.sexo }}<br />
-CPF: {{ pessoa.cpf }}<br />
-RG:
-{% if pessoa.rg is null %}
-    Não cadastrado<br />
-{% else %}
-    <br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.rg.numero }}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Data de expedição: {{ pessoa.rg.dataExpedicao | date('d/m/Y') }}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Órgão expedidor: {{ pessoa.rg.orgaoExpedidor }}<br />
-{% endif %}
-Título Eleitoral:
-{% if pessoa.titulo is null %}
-    Não cadastrado<br />
-{% else %}
-    <br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.titulo.numero | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Zona: {{ pessoa.titulo.zona | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Seção: {{ pessoa.titulo.secao | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Data de emissão: {{ pessoa.titulo.dataEmissao | date('d/m/Y') }}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Município: {{ pessoa.titulo.municipio | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;UF: {{ pessoa.titulo.uf | default("Não cadastrado")}}<br />
-{% endif %}
-PIS:
-{% if pessoa.pis is null %}
-    Não cadastrado<br />
-{% else %}
-    <br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.pis.numero | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Data de emissão: {{ pessoa.pis.dataEmissao | date('d/m/Y') }}<br />
-{% endif %}
-CTPS:
-{% if pessoa.ctps is null %}
-    Não cadastrado<br />
-{% else %}
-    <br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.ctps.numero | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;Série: {{ pessoa.ctps.serie | default("Não cadastrado")}}<br />
-    &nbsp;&nbsp;&nbsp;&nbsp;UF: {{ pessoa.ctps.uf | default("Não cadastrado")}}<br />
-{% endif %}
-Possui certidão de nascimento: {% if pessoa.certidaoNascimento %}Sim{% else %}Não{% endif %}<br />
-Possui certidão de casamento: {% if pessoa.certidaoCasamento %}Sim{% else %}Não{% endif %}<br />
-Possui cartão de vacina: {% if pessoa.cartaoVacina %}Sim{% else %}Não{% endif %}<br />
-Estado Civil: {{ pessoa.estadoCivil }}<br />
-Nome da mãe: {{ pessoa.nomeMae }}<br />
-Cor infomada: {{ pessoa.corInformada }}<br />
+<div  style="width: 50%; float: left; background: #eee;">
+    <strong>Dados Pessoais</strong><br />
+    Nome: {{ pessoa.nome }}<br />
+    Data de nascimento: {{ pessoa.dataNascimento|date('d/m/Y') }}<br />
+    Email: {{ pessoa.email }}<br />
+    Sexo: {{ pessoa.sexo }}<br />
+    CPF: {{ pessoa.cpf }}<br />
+    RG:
+    {% if pessoa.rg is null %}
+        Não cadastrado<br />
+    {% else %}
+        <br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.rg.numero }}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Data de expedição: {{ pessoa.rg.dataExpedicao | date('d/m/Y') }}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Órgão expedidor: {{ pessoa.rg.orgaoExpedidor }}<br />
+    {% endif %}
+    Título Eleitoral:
+    {% if pessoa.titulo is null %}
+        Não cadastrado<br />
+    {% else %}
+        <br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.titulo.numero | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Zona: {{ pessoa.titulo.zona | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Seção: {{ pessoa.titulo.secao | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Data de emissão: {{ pessoa.titulo.dataEmissao | date('d/m/Y') }}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Município: {{ pessoa.titulo.municipio | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;UF: {{ pessoa.titulo.uf | default("Não cadastrado")}}<br />
+    {% endif %}
+    PIS:
+    {% if pessoa.pis is null %}
+        Não cadastrado<br />
+    {% else %}
+        <br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.pis.numero | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Data de emissão: {{ pessoa.pis.dataEmissao | date('d/m/Y') }}<br />
+    {% endif %}
+    CTPS:
+    {% if pessoa.ctps is null %}
+        Não cadastrado<br />
+    {% else %}
+        <br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Número: {{ pessoa.ctps.numero | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;Série: {{ pessoa.ctps.serie | default("Não cadastrado")}}<br />
+        &nbsp;&nbsp;&nbsp;&nbsp;UF: {{ pessoa.ctps.uf | default("Não cadastrado")}}<br />
+    {% endif %}
+    Possui certidão de nascimento: {% if pessoa.certidaoNascimento %}Sim{% else %}Não{% endif %}<br />
+    Possui certidão de casamento: {% if pessoa.certidaoCasamento %}Sim{% else %}Não{% endif %}<br />
+    Possui cartão de vacina: {% if pessoa.cartaoVacina %}Sim{% else %}Não{% endif %}<br />
+    Estado Civil: {{ pessoa.estadoCivil }}<br />
+    Nome da mãe: {{ pessoa.nomeMae }}<br />
+    Cor infomada: {{ pessoa.corInformada }}<br />
+</div>
+
+<div style="width: 49%; float: right; background: #eee;">
+    <strong>Telefones</strong><br />
+    {% set fone = null %}
+    {% for telefone in pessoa.telefones %}
+        <div style="padding-bottom: 15px;  background: #ddf;">
+            Numero: {{ telefone.numero }}<br />
+            Tipo: {{ telefone.tipo }}<br />
+            Obs: {{ telefone.obs }}
+        </div>
+        <div class="spacer"></div>
+        {% set fone = 1 %}
+    {% endfor %}
+    {% if fone is null %}Nenhum telefone cadastrado.<br />{% endif %}
+    <strong>Endereços</strong><br />
+    {% set end = null %}
+    {% for endereco in pessoa.enderecos %}
+        <div  style="word-wrap: break-word;  background: #ddf;">
+            {{ endereco.nome }}<br />
+            {{ endereco.logradouro }}, {{ endereco.numero }}<br />
+            {{ endereco.bairro }}<br />
+            {{ endereco.cep }}<br />
+            {{ endereco.municipio }} - {{ endereco.uf }}<br />
+            {{ endereco.obs }}
+            {% set end = 1 %}
+        </div>
+         <div class="spacer"></div>
+    {% endfor %}
+    {% if end is null %}Nenhum endereço cadastrado.<br>{% endif %}
+</div>
