--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -1,4 +1,4 @@
-<div  style="width: 50%; float: left; background: #eee;">
+<div class="example" style="width: 96%; float: left; background: #eee; visibility: visible;">
     <strong>Dados Pessoais</strong><br />
     Nome: {{ pessoa.nome }}<br />
     Data de nascimento: {{ pessoa.dataNascimento|date('d/m/Y') }}<br />
@@ -80,3 +80,11 @@
     {% endfor %}
     {% if end is null %}Nenhum endereço cadastrado.<br>{% endif %}
 </div>
+
+
+
+
+
+
+
+
