--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -110,10 +110,24 @@
         </div>
  
         <div id="tab4" class="tab">
-            <div class="example" style="visibility: visible; background: #eee; width: 96%">
-                <p>Tab #4 content goes here!</p>
-                <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
-            </div>
+                <div style="width: 96%; background: #eee; visibility: visible" class="example">
+                    <div class="example" style="visibility: visible; width: 96%; padding-bottom: 15px;  background: #ddf;">
+                        01/09/2015 - 19:26 - Formulários Sócio Econômico preenchido
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="example" style="visibility: visible; width: 96%; padding-bottom: 15px;  background: #ddf;">
+                        01/09/2015 - 18:32 - Telefone cadastrado
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="example" style="visibility: visible; width: 96%; padding-bottom: 15px;  background: #ddf;">
+                        01/09/2015 - 18:26 - Endereço cadastrado
+                    </div>
+                    <div class="spacer"></div>
+                    <div class="example" style="visibility: visible; width: 96%; padding-bottom: 15px;  background: #ddf;">
+                        01/09/2015 - 17:43 - Cadastro do cliente.
+                    </div>
+                    <div class="spacer"></div>
+                </div>
         </div>
     </div>
 </div>
@@ -132,8 +146,8 @@
  
         e.preventDefault();
         
-        setTimeout(function(){
+        /*setTimeout(function(){
                 window.scrollTo("#userDetails",document.body.scrollHeight);
-            }, 1200);
+            }, 1200);*/
     });
 </script>
