--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -72,7 +72,7 @@
             
             var options = { 
                 //target:        '#saida',   // target element(s) to be updated with server response 
-                beforeSubmit:  showRequest,  // pre-submit callback 
+                //beforeSubmit:  showRequest,  // pre-submit callback 
                 success:       showResponse,  // post-submit callback 
 
                 // other available options: 
@@ -91,7 +91,7 @@
             $('#form2').ajaxForm(options); 
         }); 
         
-        function showRequest(formData, jqForm, options)
+        /*function showRequest(formData, jqForm, options)
         {
             var text = $.param(formData); 
             
@@ -100,7 +100,7 @@
             text = text.replace("-", "");
             text = text.replace("cpf=", "");
             //alert(text);
-        }
+        }*/
         
         
         function itemToTr(item)
@@ -168,30 +168,47 @@
                     //$('#example').clearQueue();
                     
                 }
+                
+                $('#example tr').click(function() {
+            
+                    var href = $(this).find("a").attr("href");
+
+                    if(href) {
+
+                        //window.location = href;
+                        //alert(href);
+                        $(this).find("a").attr("href","#");
+                        //$(this).click(function(){
+                            $.ajax({url: href, success: function(result){
+                                $("#userDetails").html('<div class=\"meio\">'+result+'</div>');
+                                //$("#example").css('visibility','hidden');
+                                $("#userDetails").hide();
+                                $("#userDetails").css('visibility','visible');
+                                //$("#example").hide('slow', function() {$("#userDetails").show('slow');});
+                                //$("#example").empty();
+                                $("#example").slideUp(400);
+                                $("#userDetails").delay(600).slideDown(400);
+                                $("#nome").val('');
+                                $("#cpf").val('');
+                            }});
+                        //}); 
+                    }
+                });
             }
             else {
                     
-                var trHTML = itemToTr(item);
+                /*var trHTML = itemToTr(item);
                     
                 $('#example').append(trHTML);
                 $('#example').hide();
                 $('#example').css('visibility','visible');
                 //$('#example').show('slow');
                 $('#userDetails').slideUp('slow');
-                $('#example').delay(500).slideDown(400);
-            }
-
-            $('#example tr').click(function() {
-            
-                var href = $(this).find("a").attr("href");
+                $('#example').delay(500).slideDown(400);*/
                 
-                if(href) {
-                    
-                    //window.location = href;
-                    //alert(href);
-                    $(this).find("a").attr("href","#");
-                    //$(this).click(function(){
-                        $.ajax({url: href, success: function(result){
+                
+                
+                $.ajax({url: Routing.generate('pessoa_view', {id: item.id}), success: function(result){
                             $("#userDetails").html('<div class=\"meio\">'+result+'</div>');
                             //$("#example").css('visibility','hidden');
                             $("#userDetails").hide();
@@ -203,10 +220,7 @@
                             $("#nome").val('');
                             $("#cpf").val('');
                         }});
-                    //}); 
-                }
-            });
-        
+            }        
         }
     </script>
     
