--- a/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/view.html.twig
@@ -67,6 +67,7 @@
     Estado Civil: {{ pessoa.estadoCivil }}<br />
     Nome da mãe: {{ pessoa.nomeMae }}<br />
     Cor infomada: {{ pessoa.corInformada }}<br />
+    Data de cadastro: {{ pessoa.dataCadastro | date('d/m/Y') }}<br />
 </div>
         </div>
  
