Formulario de cadastro de titulo criado com backend funcionando

--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -138,7 +138,8 @@
             $('#example').slideDown(200);
             $('#example').html(responseText);*/
             
-            
+            $('#userDetails').html('');
+            $('#userDetails').slideUp(200);
             $('#dataArea').html(responseText);
             
         }
